# wxreadbook

./: .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  wxReadBook - VS2008.sln  wxReadBook.layout  wxReadBook.project  wxReadBook.sln  wxReadBook.tags  wxReadBook.workspace  wxreadbook.desktop  wxreadbook.desktop.in
addons/libtextprocess/: Makefile.am  Makefile.in  libtextprocessing.sln
addons/libtextprocess/src/core/: ILineBuilder.h  ILineMatcher.h  TextProcess.h  TextProcessMacros.h  libtextprocessing.cbp  libtextprocessing.vcproj
addons/libtextprocess/src/core/Document/: DocumentObjectFactory.h  IDocumentLine.h  IDocumentLineBuilder.h  IDocumentLineMatcher.h
addons/libtextprocess/src/core/IO/: IMemoryMappedFile.cpp  IMemoryMappedFile.h  MemoryMappedFile.cpp  MemoryMappedFile.h
addons/libtextprocess/src/core/Impl/: LineBuilderImpl.cpp  LineBuilderImpl.h  LineImpl.cpp  LineImpl.h  LineManagerImpl.h  TextProcessImpl.h
addons/libtextprocess/src/core/Utils/: CriticalSection.h  Event.h  IReadWriteLock.h  LockStatus.h  ReadWriteLock.cpp  ReadWriteLocker.h  StringPool.cpp  StringPool.h  wxReadOnlyString.h
addons/libtextprocess/src/core/View/: IViewLine.h  IViewLineBuilder.h  IViewLineManager.h  IViewLineMatcher.h  ViewObjectFactory.h
src/: ArchiveExplorerDlg.cpp  BookMarksDlg.cpp  GBBig5Table.cpp  GBBig5Table.h  Makefile  Makefile.am  Makefile.in  ObjectCache.h  ReadBookApp.cpp  ReadBookApp.h  ReadBookBufferedDoc.cpp  ReadBookBufferedDoc.h  ReadBookBufferedView.cpp  ReadBookBufferedView.h  ReadBookCanvas.cpp  ReadBookCanvas.h  ReadBookChar.cpp  ReadBookChar.h  ReadBookDoc.cpp  ReadBookDoc.h  ReadBookDocManager.cpp  ReadBookHelperFunc.cpp  ReadBookHelperFunc.h  ReadBookIds.h  ReadBookLine.cpp  ReadBookLine.h  ReadBookMainFrm.cpp  ReadBookMainFrm.h  ReadBookPage.cpp  ReadBookPage.h  ReadBookPreference.cpp  ReadBookPreference.h  ReadBookPreferenceDlg.cpp  ReadBookSimpleDoc.cpp  ReadBookSimpleDoc.h  ReadBookSimpleView.cpp  ReadBookSimpleView.h  ReadBookView.cpp  ReadBookView.h  nsBIG5Statistics.h  (+15 more)
src/7Zip/: 7ZipClassFactory.cpp  7ZipClassFactory.h  7ZipEntry.cpp  7ZipEntry.h  7ZipInputStream.cpp  7ZipInputStream.h  7ZipOutputStream.h  Makefile.am  Makefile.in
src/ns/: nsBIG5Statistics.cpp  nsBIG5Verifier.h  nsCP1252Verifier.h  nsEUCJPStatistics.cpp  nsEUCSampler.cpp  nsEUCSampler.h  nsEUCStatistics.cpp  nsEUCTWStatistics.h  nsGB18030Verifier.cpp  nsGB2312Statistics.h  nsHZVerifier.cpp  nsHZVerifier.h  nsICharsetDetectionObserver.cpp  nsICharsetDetectionObserver.h  nsISO2022CNVerifier.cpp  nsISO2022CNVerifier.h  nsISO2022JPVerifier.cpp  nsPSMDetector.cpp  nsPSMDetector.h  nsUCS2BEVerifier.cpp  nsUCS2LEVerifier.cpp
src/presentation/: ReadBookDoc.cpp  ReadBookDoc.h  ReadBookView.cpp  ReadBookView.h
src/presentation/buffered/: ReadBookBufferedDoc.cpp
src/presentation/simple/: ObjectCache.cpp  ReadBookChar.cpp  ReadBookPage.h  ReadBookSimpleDoc.h  ReadBookSimpleView.cpp
src/presentation/textprocesslib/: ReadBookTPLDoc.cpp  ReadBookTPLDoc.h  ReadBookTPLDoc2.cpp  ReadBookTPLDoc2.h  ReadBookTPLView.cpp  ReadBookTPLView.h  ReadBookTPLView2.cpp  ReadBookTPLView2.h
src/res/: BOOK06.xpm  Makefile.am  Makefile.in  file.xpm
src/unicode/: GBBig5Table.cpp  UnicodeHelper.cpp  UnicodeHelper.h
trunk/: Makefile.am  Makefile.in  Makefile.msw  config.h.in  configure  configure.ac  ignore.txt  wxReadBook - VS2008.sln  wxReadBook.cbp  wxReadBook.depend  wxReadBook.layout  wxReadBook.sln  wxReadBook.vcproj  wxReadBook.workspace  wxreadbook.desktop.in
trunk/addons/: Makefile.in
trunk/addons/lib7zip/: Makefile.am  Makefile.in
trunk/addons/lib7zip/Lib7Zip/: 7zipLibrary.cpp  HelperFuncs.cpp  Lib7Zip - VS2008.vcproj  Makefile.am  Makefile.in
trunk/addons/lib7zip/includes/: Makefile.in
trunk/addons/libportablethread/: Makefile.in  libportablethread.vcproj
trunk/addons/libportablethread/includes/: PortableThread.h
trunk/addons/libportablethread/src/: PortableThread.cpp
trunk/addons/libtextprocess/: Makefile.am  Makefile.in
trunk/addons/libtextprocess/src/core/: ILine.h  ILineBuilder.h  ILineMatcher.h  TextProcess.h  TextProcessMacros.h  (+1 more)
trunk/doc/: Makefile.in
trunk/src/: ArchiveExplorerDlg.cpp  ArchiveExplorerDlg.h  BookMarksDlg.h  GBBig5Table.cpp  GBBig5Table.h  Makefile  Makefile.am  Makefile.in  ObjectCache.cpp  ReadBookApp.cpp  ReadBookApp.h  ReadBookBufferedDoc.cpp  ReadBookBufferedDoc.h  ReadBookBufferedView.cpp  ReadBookBufferedView.h  ReadBookCanvas.cpp  ReadBookCanvas.h  ReadBookChar.cpp  ReadBookChar.h  ReadBookDC.cpp  ReadBookDC.h  ReadBookDoc.cpp  ReadBookDoc.h  ReadBookDocManager.cpp  ReadBookDocManager.h  ReadBookHelperFunc.cpp  ReadBookHelperFunc.h  ReadBookIds.h  ReadBookKeys.h  ReadBookLine.cpp  ReadBookLine.h  ReadBookMainFrm.cpp  ReadBookMainFrm.h  ReadBookPage.cpp  ReadBookPage.h  ReadBookPreference.cpp  ReadBookPreference.h  ReadBookPreferenceDlg.h  ReadBookSimpleDoc.cpp  ReadBookSimpleDoc.h  (+18 more)
trunk/src/7Zip/: 7ZipClassFactory.cpp  7ZipClassFactory.h  7ZipEntry.cpp  7ZipEntry.h  7ZipInputStream.cpp  7ZipInputStream.h  7ZipOutputStream.cpp  Makefile.am  Makefile.in
trunk/src/ns/: nsDetector.cpp  nsDetector.h  nsEUCJPStatistics.h  nsEUCJPVerifier.h  nsEUCKRVerifier.cpp  nsGB18030Verifier.h  nsGB2312Verifier.h  nsICharsetDetector.h  nsISO2022KRVerifier.cpp  nsISO2022KRVerifier.h  nsPSMDetector.h  nsString.h  nsUCS2LEVerifier.h  nsUTF8Verifier.cpp
trunk/src/presentation/: ReadBookDC.cpp  ReadBookDoc.cpp  ReadBookDoc.h  ReadBookView.cpp  ReadBookView.h
trunk/src/presentation/buffered/: ReadBookBufferedDoc.h  ReadBookBufferedView.cpp  ReadBookBufferedView.h
trunk/src/presentation/simple/: ReadBookChar.h  ReadBookLine.cpp  ReadBookPage.cpp  ReadBookSimpleDoc.cpp  ReadBookSimpleView.cpp  ReadBookSimpleView.h
trunk/src/presentation/textprocesslib/: ReadBookTPLDoc.cpp  ReadBookTPLDoc.h  ReadBookTPLDoc2.cpp  ReadBookTPLView.cpp  ReadBookTPLView.h  ReadBookTPLView2.cpp  ReadBookTPLView2.h
trunk/src/res/: Makefile.am  Makefile.in  file32.xpm  folder.xpm  folder32.xpm
trunk/src/unicode/: UnicodeHelper.cpp  UnicodeHelper.h
(+92 files in other folders)
