noinst_LIBRARIES = libtextprocess.a
	
libtextprocess_a_SOURCES = ./src/core/Document/DocumentObjectFactory.h \
	./src/core/Document/IDocumentLine.h \
	./src/core/Document/IDocumentLineBuilder.h \
	./src/core/Document/IDocumentLineManager.h \
	./src/core/Document/IDocumentLineMatcher.h \
	./src/core/Document/Impl/DocumentLineBuilderImpl.cpp \
	./src/core/Document/Impl/DocumentLineBuilderImpl.h \
	./src/core/Document/Impl/DocumentLineImpl.cpp \
	./src/core/Document/Impl/DocumentLineImpl.h \
	./src/core/Document/Impl/DocumentLineManagerImpl.cpp \
	./src/core/Document/Impl/DocumentLineManagerImpl.h \
	./src/core/Document/Impl/DocumentLineMatcherImpl.cpp \
	./src/core/Document/Impl/DocumentLineMatcherImpl.h \
	./src/core/Document/Impl/DocumentObjectFactory.cpp \
	./src/core/ILine.h \
	./src/core/ILineBuilder.h \
	./src/core/ILineMatcher.h \
	./src/core/Impl/LineBuilderImpl.cpp \
	./src/core/Impl/LineBuilderImpl.h \
	./src/core/Impl/LineImpl.cpp \
	./src/core/Impl/LineImpl.h \
	./src/core/Impl/LineManagerImpl.h \
	./src/core/Impl/TextProcessImpl.h \
	./src/core/IO/IMemoryMappedFile.cpp \
	./src/core/IO/IMemoryMappedFile.h \
	./src/core/IO/Impl/MemoryMappedFile.cpp \
	./src/core/IO/Impl/MemoryMappedFile.h \
	./src/core/TextProcess.h \
	./src/core/TextProcessMacros.h \
	./src/core/Utils/CriticalSection.h \
	./src/core/Utils/Event.h \
	./src/core/Utils/LockStatus.h \
	./src/core/Utils/ReadWriteLock.cpp \
	./src/core/Utils/ReadWriteLock.h \
	./src/core/Utils/ReadWriteLocker.h \
	./src/core/View/Impl/ViewLineBuilderImpl.cpp \
	./src/core/View/Impl/ViewLineBuilderImpl.h \
	./src/core/View/Impl/ViewLineImpl.cpp \
	./src/core/View/Impl/ViewLineImpl.h \
	./src/core/View/Impl/ViewLineManagerImpl.cpp \
	./src/core/View/Impl/ViewLineManagerImpl.h \
	./src/core/View/Impl/ViewLineMatcherImpl.cpp \
	./src/core/View/Impl/ViewLineMatcherImpl.h \
	./src/core/View/Impl/ViewObjectFactory.cpp \
	./src/core/View/IViewLine.h \
	./src/core/View/IViewLineBuilder.h \
	./src/core/View/IViewLineManager.h \
	./src/core/View/IViewLineMatcher.h \
	./src/core/View/ViewObjectFactory.h
	
EXTRA_DIST = ./libtextprocessing.sln \
	./src/core/libtextprocessing.cbp \
	./src/core/libtextprocessing.vcproj
