noinst_LIBRARIES = libwxreadbook7zip.a

AM_CXXFLAGS = -I$(srcdir)/../../addons/lib7zip/Lib7Zip

libwxreadbook7zip_a_SOURCES = \
	7ZipClassFactory.cpp  \
	7ZipClassFactory.h  \
	7ZipEntry.cpp  \
	7ZipEntry.h  \
	7ZipInputStream.cpp  \
	7ZipInputStream.h  \
	7ZipOutputStream.cpp  \
	7ZipOutputStream.h

